Made some changes in voice, fixed some question files

--- a/question/level-1/English/level_1_eng_common_nouns.html
+++ b/question/level-1/English/level_1_eng_common_nouns.html
@@ -28,124 +28,124 @@
 
     <script>
     const questions = [
-      // 20 Common Noun Questions (options shuffled)
+      // 20 Common Noun Questions (reduced to 2 options each; order varies)
       {
         question: "Which of the following is a common noun?",
-        options: ["Girl", "Apple", "Car", "Washington"],
+        options: ["Girl", "Washington"],
         correct: "Girl",
         explanation: "'Girl' names a general person, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Paris", "Boy", "Rose", "Jeddah"],
+        options: ["Paris", "Boy"],
         correct: "Boy",
         explanation: "'Boy' is a general term for a male child, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Mercury", "Google", "School", "The West Bank"],
+        options: ["Google", "School"],
         correct: "School",
         explanation: "'School' refers to any educational building, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["New York", "Harvard University", "Charles Dickens", "Author"],
+        options: ["Author", "Charles Dickens"],
         correct: "Author",
         explanation: "'Author' names a general profession, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Dog", "The Rhine", "Fido", "United States"],
+        options: ["Fido", "Dog"],
         correct: "Dog",
         explanation: "'Dog' names any canine, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Roma", "Tech Company", "Sandy’s Bake Shop", "Google"],
+        options: ["Google", "Tech Company"],
         correct: "Tech Company",
         explanation: "'Tech Company' is a general business category, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Oxford University", "Berlin", "Country", "France"],
+        options: ["France", "Country"],
         correct: "Country",
         explanation: "'Country' names any nation or region, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Paris", "Apple", "Harvard University", "River"],
+        options: ["River", "Paris"],
         correct: "River",
         explanation: "'River' refers to any watercourse, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Book", "Venus", "Mercury", "Harry Potter"],
+        options: ["Harry Potter", "Book"],
         correct: "Book",
         explanation: "'Book' names any bound written work, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Mount Kilimanjaro", "City", "The Nile", "New York"],
+        options: ["New York", "City"],
         correct: "City",
         explanation: "'City' names any urban area, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["White House", "Volleyball", "City", "Bald Eagle"],
+        options: ["City", "White House"],
         correct: "City",
         explanation: "'City' names any town, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Pear", "Apple", "The Nile", "Tree"],
+        options: ["Tree", "The Nile"],
         correct: "Tree",
         explanation: "'Tree' is a general term for any woody plant, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Flower", "Snickers", "Oreo", "Rose"],
+        options: ["Snickers", "Flower"],
         correct: "Flower",
         explanation: "'Flower' names any blossom, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Horse", "Planet", "Denmark", "Mercury"],
+        options: ["Planet", "Denmark"],
         correct: "Planet",
         explanation: "'Planet' names any celestial body orbiting a star, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Google", "England", "Mountain", "Venus"],
+        options: ["England", "Mountain"],
         correct: "Mountain",
         explanation: "'Mountain' is a general landform type, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Saturn", "Apple", "Orange", "Fruit"],
+        options: ["Fruit", "Saturn"],
         correct: "Fruit",
         explanation: "'Fruit' names any edible produce, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Car", "Volleyball", "Basketball", "Watermelon"],
+        options: ["Volleyball", "Car"],
         correct: "Car",
         explanation: "'Car' names any motor vehicle, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Banana", "School", "University", "Apple"],
+        options: ["School", "Banana"],
         correct: "School",
         explanation: "'School' is a general place of learning, so it’s a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["Toyota", "Tommy", "Pear", "Egypt"],
+        options: ["Toyota", "Pear"],
         correct: "Pear",
         explanation: "'Pear' names any of the fruit, making it a common noun."
       },
       {
         question: "Which of the following is a common noun?",
-        options: ["New York", "Mercedes", "Harvard University", "Melons"],
+        options: ["Melons", "Harvard University"],
         correct: "Melons",
         explanation: "'Melons' refers to any type of melon, so it’s a common noun."
       }
@@ -159,4 +159,3 @@
     <script src="../../../js/partials.js"></script>
   </body>
 </html>
-
