--- a/start-page3/Level1_english/level1_eng_identify_options.html
+++ b/start-page3/Level1_english/level1_eng_identify_options.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LOYAL's M.C.Q</title>
   <!-- CSS in root css/ folder -->
-  <link rel="stylesheet" href="../css/index.css" />
+  <link rel="stylesheet" href="../../css/index.css" />
 </head>
 <body>
 
@@ -21,14 +21,14 @@
       <div class="card-icon">I</div>
       <h3 class="card-title">Identify the images</h3>
       <p class="card-desc">Part 1</p>
-      <a href="../question/level-1/English/level_1_eng_Identify_part1.html" class="card-btn">Start</a>
+      <a href="../../question/level-1/English/level_1_eng_Identify_part1.html" class="card-btn">Start</a>
     </div>
 
     <div class="card" data-level="2">
       <div class="card-icon">I</div>
       <h3 class="card-title">Identify the images</h3>
       <p class="card-desc">Part 2</p>
-      <a href="../question/level-1/English/level_1_eng_Identify_part2.html" class="card-btn">Start</a>
+      <a href="../../question/level-1/English/level_1_eng_Identify_part2.html" class="card-btn">Start</a>
     </div>
 
 </main>
