--- a/question/level-1/English/level_1_eng_verbs_in_sentences.html
+++ b/question/level-1/English/level_1_eng_verbs_in_sentences.html
@@ -27,135 +27,134 @@
     </main>
 
     <script>
-        const questions = [
-          {
-            question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'> Sam ______ cards.</span>",
-            options: ["closes", "plays"],
-            correct: "plays",
-            explanation: "'plays' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: <span style='color:black;'>The cat ______on the couch</span>",
-            options: ["drink", "jumps", "Jump"],
-            correct: "jumps",
-            explanation: "'jumps' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The dog ……….. loud.'",
-            options: ["bark", "barks", "eat"],
-            correct: "barks",
-            explanation: "'barks' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The teacher ……..the book.'",
-            options: ["eat", "opens", "sees"],
-            correct: "opens",
-            explanation: "'opens' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'Tom …………milk'",
-            options: ["sleep", "drink", "buy"],
-            correct: "drink",
-            explanation: "'drink' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The boy …………….. his mom.'",
-            options: ["see", "Jumps", "calls"],
-            correct: "calls",
-            explanation: "'calls' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The cat …………. the food on the table.'",
-            options: ["sleep", "sees", "see"],
-            correct: "sees",
-            explanation: "'sees' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The bat ……………away.'",
-            options: ["flies", "see", "fly"],
-            correct: "flies",
-            explanation: "'flies' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The policeman ……….. the thief.'",
-            options: ["open", "sleep", "catches"],
-            correct: "catches",
-            explanation: "'catches' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The girl ……. '",
-            options: ["dance", "sun", "dances"],
-            correct: "dances",
-            explanation: "'dances' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The girl ………. her father'",
-            options: ["thank", "flower", "thanks"],
-            correct: "thanks",
-            explanation: "'thanks' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The farther …………… his son at school.'",
-            options: ["explain", "sleep", "drops"],
-            correct: "drops",
-            explanation: "'drops' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The teacher ……………… Math.'",
-            options: ["teach", "write", "teaches"],
-            correct: "teaches",
-            explanation: "'teaches' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'She ………… a beautiful poem'",
-            options: ["write", "writes", "sleep"],
-            correct: "writes",
-            explanation: "'writes' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'He ……………..  a beautiful letter.'",
-            options: ["sleep", "write", "writes"],
-            correct: "writes",
-            explanation: "'writes' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The bell……'",
-            options: ["rings", "jumps", "ring"],
-            correct: "rings",
-            explanation: "'rings' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The doctor………………. to his patients.'",
-            options: ["talks", "open", "talk"],
-            correct: "talks",
-            explanation: "'talks' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The teacher …………….. the lesson very well.'",
-            options: ["Swim", "explains", "explain"],
-            correct: "explains",
-            explanation: "'explains' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The boy ………………. his mom.'",
-            options: ["sun", "thanks", "thank"],
-            correct: "thanks",
-            explanation: "'thanks' is the correct verb that fits the sentence."
-          },
-          {
-            question: "Which word is the correct verb in the sentence: 'The teacher ……………… English'",
-            options: ["write", "teaches", "teach"],
-            correct: "teaches",
-            explanation: "'teaches' is the correct verb that fits the sentence."
-          }
-        ];
-        </script>
+      const questions = [
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>Sam ______ cards.</span>",
+          options: ["cards", "plays"],
+          correct: "plays",
+          explanation: "'plays' is the action that fits the sentence; 'cards' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The cat ______ on the couch.</span>",
+          options: ["jumps", "milk"],
+          correct: "jumps",
+          explanation: "'jumps' is a verb; 'milk' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The dog ______ loudly.</span>",
+          options: ["barks", "chair"],
+          correct: "barks",
+          explanation: "'barks' is a verb; 'chair' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The teacher ______ the book.</span>",
+          options: ["opens", "pencil"],
+          correct: "opens",
+          explanation: "'opens' is a verb; 'pencil' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>Tom ______ milk.</span>",
+          options: ["drinks", "sleep"],
+          correct: "drinks",
+          explanation: "'drinks' is the correct verb; 'sleep' does not fit here."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The boy ______ his mom.</span>",
+          options: ["calls", "ball"],
+          correct: "calls",
+          explanation: "'calls' is a verb; 'ball' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The cat ______ the food on the table.</span>",
+          options: ["sees", "sleep"],
+          correct: "sees",
+          explanation: "'sees' is a verb; 'sleep' is not correct here."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The bat ______ away.</span>",
+          options: ["flies", "hat"],
+          correct: "flies",
+          explanation: "'flies' is a verb; 'hat' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The policeman ______ the thief.</span>",
+          options: ["catches", "door"],
+          correct: "catches",
+          explanation: "'catches' is a verb; 'door' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The girl ______.</span>",
+          options: ["dances", "sun"],
+          correct: "dances",
+          explanation: "'dances' is a verb; 'sun' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The girl ______ her father.</span>",
+          options: ["thanks", "flower"],
+          correct: "thanks",
+          explanation: "'thanks' is a verb; 'flower' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The father ______ his son at school.</span>",
+          options: ["drops", "pencil"],
+          correct: "drops",
+          explanation: "'drops' is a verb; 'pencil' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The teacher ______ Math.</span>",
+          options: ["teaches", "book"],
+          correct: "teaches",
+          explanation: "'teaches' is a verb; 'book' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>She ______ a beautiful poem.</span>",
+          options: ["writes", "sleep"],
+          correct: "writes",
+          explanation: "'writes' is the verb that fits; 'sleep' is not."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>He ______ a beautiful letter.</span>",
+          options: ["writes", "bed"],
+          correct: "writes",
+          explanation: "'writes' is a verb; 'bed' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The bell ______.</span>",
+          options: ["rings", "rope"],
+          correct: "rings",
+          explanation: "'rings' is a verb; 'rope' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The doctor ______ to his patients.</span>",
+          options: ["talks", "chair"],
+          correct: "talks",
+          explanation: "'talks' is a verb; 'chair' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The teacher ______ the lesson very well.</span>",
+          options: ["explains", "map"],
+          correct: "explains",
+          explanation: "'explains' is a verb; 'map' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The boy ______ his mom.</span>",
+          options: ["thanks", "sun"],
+          correct: "thanks",
+          explanation: "'thanks' is a verb; 'sun' is a noun."
+        },
+        {
+          question: "Choose the correct verb to complete the sentence. <br> <span style='color:black;'>The teacher ______ English.</span>",
+          options: ["teaches", "pencil"],
+          correct: "teaches",
+          explanation: "'teaches' is a verb; 'pencil' is a noun."
+        }
+      ];
+    </script>
 
-  <!-- Professional Footer -->
+    <!-- Professional Footer -->
     <div id="site-footer-placeholder"></div>
     <!-- point to your main quiz logic -->
     <script src="../../../js/script.js"></script>
     <script src="../../../js/partials.js"></script>
   </body>
 </html>
-
