--- a/question/Level 1 Maths/Level_1_maths_Addition_upto_20.html
+++ b/question/Level 1 Maths/Level_1_maths_Addition_upto_20.html
@@ -30,7 +30,7 @@
      const questions = [
   {
     question: "What is 10 + 9?",
-    options: ["19", "20", "18", "17"],
+    options: ["19", "20"],
     correct: "19",
     explanation: "10 + 9 = 19"
   },
