linked all pages

--- a/start-page2/Level 1/subject_level1_english_options.html
+++ b/start-page2/Level 1/subject_level1_english_options.html
@@ -128,11 +128,25 @@
         <a href="../../question/level-1/English/level_1_eng_verbs_in_sentences.html" class="card-btn">Start</a>
       </div>
 
-      <div class="card" data-level="14">
+      <div class="card" data-level="15">
         <div class="card-icon">V</div>
         <h3 class="card-title">Adjectives</h3>
         <p class="card-desc">Drag and drop</p>
         <a href="../../question/level-1/English/level_1_eng_drag_and_drop_adjectives.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="16">
+        <div class="card-icon">V</div>
+        <h3 class="card-title">Verb to be</h3>
+        <p class="card-desc">Present tense</p>
+        <a href="../../question/level-1/English/level_1_eng_verbs-to_be_present_tense.html" class="card-btn">Start</a>
+      </div>
+
+      <div class="card" data-level="17">
+        <div class="card-icon">V</div>
+        <h3 class="card-title">Verb Have</h3>
+        <p class="card-desc">Past tense</p>
+        <a href="../../question/level-1/English/level_1_english_verb_have_past_tense.html" class="card-btn">Start</a>
       </div>
     </div>
   </main>
