--- a/question/Level 1 Maths/level_1_reading_numbers_till_10.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_10.html
@@ -29,26 +29,32 @@
 <script>
   const questions = [
     {
+      question: "Read the numbers in words. Choose the correct numeral. <br> Zero",
+      options: ["5", "0"],
+      correct: "0",
+      explanation: "Zero = 0"
+    },
+    {
       question: "Read the numbers in words. Choose the correct numeral. <br> One",
-      options: ["1", "2"],
+      options: ["7", "1"],
       correct: "1",
       explanation: "One = 1"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Two",
-      options: ["3", "2"],
+      options: ["2", "9"],
       correct: "2",
       explanation: "Two = 2"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Three",
-      options: ["3", "4"],
+      options: ["3", "8"],
       correct: "3",
       explanation: "Three = 3"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Four",
-      options: ["5", "4"],
+      options: ["10", "4"],
       correct: "4",
       explanation: "Four = 4"
     },
@@ -60,34 +66,34 @@
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Six",
-      options: ["6", "7"],
+      options: ["1", "6"],
       correct: "6",
       explanation: "Six = 6"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Seven",
-      options: ["8", "7"],
+      options: ["7", "4"],
       correct: "7",
       explanation: "Seven = 7"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Eight",
-      options: ["9", "8"],
+      options: ["8", "6"],
       correct: "8",
       explanation: "Eight = 8"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Nine",
-      options: ["10", "9"],
+      options: ["0", "9"],
       correct: "9",
       explanation: "Nine = 9"
     },
     {
       question: "Read the numbers in words. Choose the correct numeral. <br> Ten",
-      options: ["11", "10"],
+      options: ["10", "9"],
       correct: "10",
       explanation: "Ten = 10"
-    }
+        }
   ];
 </script>
 
