linked all 19 files of mustafa and also linked partials.js properly in identify options in english

--- a/start-page3/Level1_english/level1_eng_identify_options.html
+++ b/start-page3/Level1_english/level1_eng_identify_options.html
@@ -8,11 +8,8 @@
   <link rel="stylesheet" href="../../css/index.css" />
 </head>
 <body>
-
-
-    <!-- Sticky Header -->
+  <!-- Sticky Header -->
     <div id="site-header-placeholder"></div>
-
     <!-- ========== Main Content ========== -->
 <main class="startpage">
   <h1 class="page-title">What would you like to practice in English</h1>
@@ -37,6 +34,6 @@
     <div id="site-footer-placeholder"></div>
 
   <script src="../../js/script.js"></script>
-  <script src="../js/partials.js"></script>
+  <script src="../../js/partials.js"></script>
 </body>
 </html>
