--- a/question/level-1/English/level_1_eng_adverb.html
+++ b/question/level-1/English/level_1_eng_adverb.html
@@ -35,7 +35,7 @@
             explanation: "'Gladly' describes how the action was done, making it an adverb."
           },
           {
-            question: "Which word is the adverb in the sentence: 'The cat runs fast.'?",
+            question: "Identify the adverb in the sentence. <br> <span style='color:black;'>The cat runs fast.</span>",
             options: ["cat", "fast", "runs", "the"],
             correct: "fast",
             explanation: "'Fast' tells how the cat runs, so it's an adverb."
