--- a/question/Level 1 Maths/level_1_reading_numbers_till_10.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_10.html
@@ -29,7 +29,7 @@
 <script>
   const questions = [
     {
-      question: "<span style='color:black;'>Read the numbers in words. Choose the correct numeral.</span> <br> Zero",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Zero</span>",
       options: ["5", "0"],
       correct: "0",
       explanation: "Zero = 0"
