--- a/question/Level 1 Maths/level_1_reading_numbers_till_10.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_10.html
@@ -35,65 +35,65 @@
       explanation: "Zero = 0"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> One",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>One</span>",
       options: ["7", "1"],
       correct: "1",
       explanation: "One = 1"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Two",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Two</span>",
       options: ["2", "9"],
       correct: "2",
       explanation: "Two = 2"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Three",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Three</span>",
       options: ["3", "8"],
       correct: "3",
       explanation: "Three = 3"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Four",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Four</span>",
       options: ["10", "4"],
       correct: "4",
       explanation: "Four = 4"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Five",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Five</span>",
       options: ["6", "5"],
       correct: "5",
       explanation: "Five = 5"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Six",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Six</span>",
       options: ["1", "6"],
       correct: "6",
       explanation: "Six = 6"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seven",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seven</span>",
       options: ["7", "4"],
       correct: "7",
       explanation: "Seven = 7"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eight",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eight</span>",
       options: ["8", "6"],
       correct: "8",
       explanation: "Eight = 8"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nine",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nine</span>",
       options: ["0", "9"],
       correct: "9",
       explanation: "Nine = 9"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Ten",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Ten</span>",
       options: ["10", "9"],
       correct: "10",
       explanation: "Ten = 10"
-        }
+    }
   ];
 </script>
 
