--- a/question/Level 1 Maths/level_1_reading_numbers_till_20.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_20.html
@@ -29,127 +29,127 @@
 <script>
   const questions = [
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Zero",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Zero</span>",
       options: ["5", "0"],
       correct: "0",
       explanation: "Zero = 0"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> One",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>One</span>",
       options: ["7", "1"],
       correct: "1",
       explanation: "One = 1"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Two",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Two</span>",
       options: ["2", "9"],
       correct: "2",
       explanation: "Two = 2"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Three",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Three</span>",
       options: ["3", "8"],
       correct: "3",
       explanation: "Three = 3"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Four",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Four</span>",
       options: ["10", "4"],
       correct: "4",
       explanation: "Four = 4"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Five",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Five</span>",
       options: ["6", "5"],
       correct: "5",
       explanation: "Five = 5"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Six",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Six</span>",
       options: ["12", "6"],
       correct: "6",
       explanation: "Six = 6"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seven",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seven</span>",
       options: ["7", "14"],
       correct: "7",
       explanation: "Seven = 7"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eight",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eight</span>",
       options: ["8", "15"],
       correct: "8",
       explanation: "Eight = 8"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nine",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nine</span>",
       options: ["20", "9"],
       correct: "9",
       explanation: "Nine = 9"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Ten",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Ten</span>",
       options: ["10", "18"],
       correct: "10",
       explanation: "Ten = 10"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eleven",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eleven</span>",
       options: ["19", "11"],
       correct: "11",
       explanation: "Eleven = 11"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twelve",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twelve</span>",
       options: ["16", "12"],
       correct: "12",
       explanation: "Twelve = 12"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirteen</span>",
       options: ["13", "5"],
       correct: "13",
       explanation: "Thirteen = 13"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fourteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fourteen</span>",
       options: ["14", "2"],
       correct: "14",
       explanation: "Fourteen = 14"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fifteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fifteen</span>",
       options: ["9", "15"],
       correct: "15",
       explanation: "Fifteen = 15"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Sixteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Sixteen</span>",
       options: ["1", "16"],
       correct: "16",
       explanation: "Sixteen = 16"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seventeen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seventeen</span>",
       options: ["17", "11"],
       correct: "17",
       explanation: "Seventeen = 17"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eighteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eighteen</span>",
       options: ["4", "18"],
       correct: "18",
       explanation: "Eighteen = 18"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nineteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nineteen</span>",
       options: ["19", "7"],
       correct: "19",
       explanation: "Nineteen = 19"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty</span>",
       options: ["6", "20"],
       correct: "20",
       explanation: "Twenty = 20"
