--- a/question/Level 1 Maths/level_1_reading_numbers_till_30.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_30.html
@@ -29,188 +29,188 @@
 <script>
   const questions = [
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Zero",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Zero</span>",
       options: ["5", "0"],
       correct: "0",
       explanation: "Zero = 0"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> One",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>One</span>",
       options: ["7", "1"],
       correct: "1",
       explanation: "One = 1"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Two",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Two</span>",
       options: ["2", "9"],
       correct: "2",
       explanation: "Two = 2"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Three",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Three</span>",
       options: ["3", "8"],
       correct: "3",
       explanation: "Three = 3"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Four",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Four</span>",
       options: ["10", "4"],
       correct: "4",
       explanation: "Four = 4"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Five",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Five</span>",
       options: ["6", "5"],
       correct: "5",
       explanation: "Five = 5"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Six",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Six</span>",
       options: ["12", "6"],
       correct: "6",
       explanation: "Six = 6"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seven",
-      options: ["14", "7"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seven</span>",
+      options: ["7", "14"],
       correct: "7",
       explanation: "Seven = 7"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eight",
-      options: ["15", "8"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eight</span>",
+      options: ["8", "15"],
       correct: "8",
       explanation: "Eight = 8"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nine",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nine</span>",
       options: ["20", "9"],
       correct: "9",
       explanation: "Nine = 9"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Ten",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Ten</span>",
       options: ["10", "18"],
       correct: "10",
       explanation: "Ten = 10"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eleven",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eleven</span>",
       options: ["19", "11"],
       correct: "11",
       explanation: "Eleven = 11"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twelve",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twelve</span>",
       options: ["16", "12"],
       correct: "12",
       explanation: "Twelve = 12"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirteen",
-      options: ["5", "13"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirteen</span>",
+      options: ["13", "5"],
       correct: "13",
       explanation: "Thirteen = 13"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fourteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fourteen</span>",
       options: ["14", "2"],
       correct: "14",
       explanation: "Fourteen = 14"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fifteen",
-      options: ["15", "9"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fifteen</span>",
+      options: ["9", "15"],
       correct: "15",
       explanation: "Fifteen = 15"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Sixteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Sixteen</span>",
       options: ["1", "16"],
       correct: "16",
       explanation: "Sixteen = 16"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seventeen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seventeen</span>",
       options: ["17", "11"],
       correct: "17",
       explanation: "Seventeen = 17"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eighteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eighteen</span>",
       options: ["4", "18"],
       correct: "18",
       explanation: "Eighteen = 18"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nineteen",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nineteen</span>",
       options: ["19", "7"],
       correct: "19",
       explanation: "Nineteen = 19"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty</span>",
       options: ["6", "20"],
       correct: "20",
       explanation: "Twenty = 20"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-One",
-      options: ["21", "15"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty One</span>",
+      options: ["21", "12"],
       correct: "21",
-      explanation: "Twenty-One = 21"
+      explanation: "Twenty One = 21"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Two",
-      options: ["19", "22"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Two</span>",
+      options: ["15", "22"],
       correct: "22",
-      explanation: "Twenty-Two = 22"
+      explanation: "Twenty Two = 22"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Three",
-      options: ["12", "23"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Three</span>",
+      options: ["23", "18"],
       correct: "23",
-      explanation: "Twenty-Three = 23"
+      explanation: "Twenty Three = 23"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Four",
-      options: ["24", "8"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Four</span>",
+      options: ["19", "24"],
       correct: "24",
-      explanation: "Twenty-Four = 24"
+      explanation: "Twenty Four = 24"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Five",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Five</span>",
       options: ["25", "17"],
       correct: "25",
-      explanation: "Twenty-Five = 25"
+      explanation: "Twenty Five = 25"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Six",
-      options: ["26", "11"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Six</span>",
+      options: ["20", "26"],
       correct: "26",
-      explanation: "Twenty-Six = 26"
+      explanation: "Twenty Six = 26"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Seven",
-      options: ["4", "27"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Seven</span>",
+      options: ["27", "14"],
       correct: "27",
-      explanation: "Twenty-Seven = 27"
+      explanation: "Twenty Seven = 27"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Eight",
-      options: ["13", "28"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Eight</span>",
+      options: ["21", "28"],
       correct: "28",
-      explanation: "Twenty-Eight = 28"
+      explanation: "Twenty Eight = 28"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Nine",
-      options: ["29", "7"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty Nine</span>",
+      options: ["29", "13"],
       correct: "29",
-      explanation: "Twenty-Nine = 29"
+      explanation: "Twenty Nine = 29"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty",
-      options: ["30", "14"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty</span>",
+      options: ["30", "22"],
       correct: "30",
       explanation: "Thirty = 30"
     }
