--- a/question/Level 1 Maths/level_1_reading_numbers_till_40.html
+++ b/question/Level 1 Maths/level_1_reading_numbers_till_40.html
@@ -29,251 +29,239 @@
 <script>
   const questions = [
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Zero",
-      options: ["5", "0"],
-      correct: "0",
-      explanation: "Zero = 0"
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Seven</span>",
+      options: ["16", "37"],
+      correct: "37",
+      explanation: "Thirty-Seven = 37"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> One",
-      options: ["9", "1"],
-      correct: "1",
-      explanation: "One = 1"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Two",
-      options: ["2", "7"],
-      correct: "2",
-      explanation: "Two = 2"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Three",
-      options: ["11", "3"],
-      correct: "3",
-      explanation: "Three = 3"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Four",
-      options: ["13", "4"],
-      correct: "4",
-      explanation: "Four = 4"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Five",
-      options: ["5", "15"],
-      correct: "5",
-      explanation: "Five = 5"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Six",
-      options: ["19", "6"],
-      correct: "6",
-      explanation: "Six = 6"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seven",
-      options: ["22", "7"],
-      correct: "7",
-      explanation: "Seven = 7"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eight",
-      options: ["12", "8"],
-      correct: "8",
-      explanation: "Eight = 8"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nine",
-      options: ["16", "9"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nine</span>",
+      options: ["20", "9"],
       correct: "9",
       explanation: "Nine = 9"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Ten",
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Eight</span>",
+      options: ["10", "28"],
+      correct: "28",
+      explanation: "Twenty-Eight = 28"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Forty</span>",
+      options: ["25", "40"],
+      correct: "40",
+      explanation: "Forty = 40"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Three</span>",
+      options: ["8", "3"],
+      correct: "3",
+      explanation: "Three = 3"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-One</span>",
+      options: ["30", "21"],
+      correct: "21",
+      explanation: "Twenty-One = 21"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seventeen</span>",
+      options: ["11", "17"],
+      correct: "17",
+      explanation: "Seventeen = 17"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Zero</span>",
+      options: ["0", "5"],
+      correct: "0",
+      explanation: "Zero = 0"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty</span>",
+      options: ["15", "30"],
+      correct: "30",
+      explanation: "Thirty = 30"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eleven</span>",
+      options: ["11", "19"],
+      correct: "11",
+      explanation: "Eleven = 11"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Five</span>",
+      options: ["5", "6"],
+      correct: "5",
+      explanation: "Five = 5"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Four</span>",
+      options: ["18", "24"],
+      correct: "24",
+      explanation: "Twenty-Four = 24"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Two</span>",
+      options: ["32", "11"],
+      correct: "32",
+      explanation: "Thirty-Two = 32"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Nineteen</span>",
+      options: ["19", "7"],
+      correct: "19",
+      explanation: "Nineteen = 19"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Six</span>",
+      options: ["26", "12"],
+      correct: "26",
+      explanation: "Twenty-Six = 26"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Eight</span>",
+      options: ["21", "38"],
+      correct: "38",
+      explanation: "Thirty-Eight = 38"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>One</span>",
+      options: ["1", "7"],
+      correct: "1",
+      explanation: "One = 1"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Nine</span>",
+      options: ["24", "39"],
+      correct: "39",
+      explanation: "Thirty-Nine = 39"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fourteen</span>",
+      options: ["14", "2"],
+      correct: "14",
+      explanation: "Fourteen = 14"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Five</span>",
+      options: ["17", "25"],
+      correct: "25",
+      explanation: "Twenty-Five = 25"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Three</span>",
+      options: ["27", "33"],
+      correct: "33",
+      explanation: "Thirty-Three = 33"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Nine</span>",
+      options: ["8", "29"],
+      correct: "29",
+      explanation: "Twenty-Nine = 29"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Fifteen</span>",
+      options: ["9", "15"],
+      correct: "15",
+      explanation: "Fifteen = 15"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirteen</span>",
+      options: ["5", "13"],
+      correct: "13",
+      explanation: "Thirteen = 13"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty-Three</span>",
+      options: ["23", "19"],
+      correct: "23",
+      explanation: "Twenty-Three = 23"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Seven</span>",
+      options: ["14", "7"],
+      correct: "7",
+      explanation: "Seven = 7"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Six</span>",
+      options: ["36", "12"],
+      correct: "36",
+      explanation: "Thirty-Six = 36"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twenty</span>",
+      options: ["6", "20"],
+      correct: "20",
+      explanation: "Twenty = 20"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Four</span>",
+      options: ["4", "10"],
+      correct: "4",
+      explanation: "Four = 4"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Four</span>",
+      options: ["22", "34"],
+      correct: "34",
+      explanation: "Thirty-Four = 34"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eighteen</span>",
+      options: ["4", "18"],
+      correct: "18",
+      explanation: "Eighteen = 18"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Eight</span>",
+      options: ["15", "8"],
+      correct: "8",
+      explanation: "Eight = 8"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-One</span>",
+      options: ["20", "31"],
+      correct: "31",
+      explanation: "Thirty-One = 31"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Two</span>",
+      options: ["2", "9"],
+      correct: "2",
+      explanation: "Two = 2"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Twelve</span>",
+      options: ["16", "12"],
+      correct: "12",
+      explanation: "Twelve = 12"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Sixteen</span>",
+      options: ["1", "16"],
+      correct: "16",
+      explanation: "Sixteen = 16"
+    },
+    {
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Ten</span>",
       options: ["18", "10"],
       correct: "10",
       explanation: "Ten = 10"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eleven",
-      options: ["20", "11"],
-      correct: "11",
-      explanation: "Eleven = 11"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twelve",
-      options: ["24", "12"],
-      correct: "12",
-      explanation: "Twelve = 12"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirteen",
-      options: ["13", "25"],
-      correct: "13",
-      explanation: "Thirteen = 13"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fourteen",
-      options: ["30", "14"],
-      correct: "14",
-      explanation: "Fourteen = 14"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Fifteen",
-      options: ["27", "15"],
-      correct: "15",
-      explanation: "Fifteen = 15"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Sixteen",
-      options: ["16", "21"],
-      correct: "16",
-      explanation: "Sixteen = 16"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Seventeen",
-      options: ["8", "17"],
-      correct: "17",
-      explanation: "Seventeen = 17"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Eighteen",
-      options: ["18", "5"],
-      correct: "18",
-      explanation: "Eighteen = 18"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Nineteen",
-      options: ["19", "14"],
-      correct: "19",
-      explanation: "Nineteen = 19"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty",
-      options: ["20", "6"],
-      correct: "20",
-      explanation: "Twenty = 20"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-One",
-      options: ["10", "21"],
-      correct: "21",
-      explanation: "Twenty-One = 21"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Two",
-      options: ["22", "11"],
-      correct: "22",
-      explanation: "Twenty-Two = 22"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Three",
-      options: ["23", "15"],
-      correct: "23",
-      explanation: "Twenty-Three = 23"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Four",
-      options: ["24", "19"],
-      correct: "24",
-      explanation: "Twenty-Four = 24"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Five",
-      options: ["7", "25"],
-      correct: "25",
-      explanation: "Twenty-Five = 25"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Six",
-      options: ["26", "14"],
-      correct: "26",
-      explanation: "Twenty-Six = 26"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Seven",
-      options: ["27", "4"],
-      correct: "27",
-      explanation: "Twenty-Seven = 27"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Eight",
-      options: ["28", "17"],
-      correct: "28",
-      explanation: "Twenty-Eight = 28"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Twenty-Nine",
-      options: ["29", "12"],
-      correct: "29",
-      explanation: "Twenty-Nine = 29"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty",
-      options: ["30", "9"],
-      correct: "30",
-      explanation: "Thirty = 30"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-One",
-      options: ["18", "31"],
-      correct: "31",
-      explanation: "Thirty-One = 31"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Two",
-      options: ["32", "6"],
-      correct: "32",
-      explanation: "Thirty-Two = 32"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Three",
-      options: ["33", "11"],
-      correct: "33",
-      explanation: "Thirty-Three = 33"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Four",
-      options: ["34", "15"],
-      correct: "34",
-      explanation: "Thirty-Four = 34"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Five",
-      options: ["21", "35"],
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Thirty-Five</span>",
+      options: ["35", "19"],
       correct: "35",
       explanation: "Thirty-Five = 35"
     },
     {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Six",
-      options: ["36", "5"],
-      correct: "36",
-      explanation: "Thirty-Six = 36"
+      question: "Read the numbers in words. Choose the correct numeral. <br> <span style='color:black;'>Six</span>",
+      options: ["6", "12"],
+      correct: "6",
+      explanation: "Six = 6"
     },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Seven",
-      options: ["37", "14"],
-      correct: "37",
-      explanation: "Thirty-Seven = 37"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Eight",
-      options: ["38", "19"],
-      correct: "38",
-      explanation: "Thirty-Eight = 38"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Thirty-Nine",
-      options: ["22", "39"],
-      correct: "39",
-      explanation: "Thirty-Nine = 39"
-    },
-    {
-      question: "Read the numbers in words. Choose the correct numeral. <br> Forty",
-      options: ["40", "16"],
-      correct: "40",
-      explanation: "Forty = 40"
-    }
   ];
 </script>
 
