--- a/question/Level 1 Maths/level_1_convert_numbers_till_10.html
+++ b/question/Level 1 Maths/level_1_convert_numbers_till_10.html
@@ -29,64 +29,70 @@
 <script>
   const questions = [
     {
-      question: "Convert the given number in words: <br> <span style='color:black;'>1</span>",
-      options: ["One", "Two"],
-      correct: "One",
-      explanation: "1 = One"
-    },
-    {
-      question: "Convert the given number in words: <br> <span style='color:black;'>5</span>",
-      options: ["Six", "Five"],
-      correct: "Five",
-      explanation: "5 = Five"
-    },
-    {
-      question: "Convert the given number in words: <br> <span style='color:black;'>9</span>",
-      options: ["Nine", "Seven"],
-      correct: "Nine",
-      explanation: "9 = Nine"
-    },
-    {
-      question: "Convert the given number in words: <br> <span style='color:black;'>3</span>",
-      options: ["Three", "Eight"],
-      correct: "Three",
-      explanation: "3 = Three"
-    },
-    {
-      question: "Convert the given number in words: <br> <span style='color:black;'>10</span>",
-      options: ["Ten", "Four"],
-      correct: "Ten",
-      explanation: "10 = Ten"
-    },
-    {
       question: "Convert the given number in words: <br> <span style='color:black;'>0</span>",
       options: ["Zero", "Two"],
       correct: "Zero",
       explanation: "0 = Zero"
     },
     {
-      question: "Convert the given number in words: <br> <span style='color:black;'>8</span>",
-      options: ["Five", "Eight"],
-      correct: "Eight",
-      explanation: "8 = Eight"
+      question: "Convert the given number in words: <br> <span style='color:black;'>1</span>",
+      options: ["Two", "One"],
+      correct: "One",
+      explanation: "1 = One"
+    },
+    {
+      question: "Convert the given number in words: <br> <span style='color:black;'>2</span>",
+      options: ["Two", "Five"],
+      correct: "Two",
+      explanation: "2 = Two"
+    },
+    {
+      question: "Convert the given number in words: <br> <span style='color:black;'>3</span>",
+      options: ["Eight", "Three"],
+      correct: "Three",
+      explanation: "3 = Three"
     },
     {
       question: "Convert the given number in words: <br> <span style='color:black;'>4</span>",
-      options: ["Six", "Four"],
+      options: ["Four", "Six"],
       correct: "Four",
       explanation: "4 = Four"
     },
     {
+      question: "Convert the given number in words: <br> <span style='color:black;'>5</span>",
+      options: ["Seven", "Five"],
+      correct: "Five",
+      explanation: "5 = Five"
+    },
+    {
+      question: "Convert the given number in words: <br> <span style='color:black;'>6</span>",
+      options: ["Six", "Nine"],
+      correct: "Six",
+      explanation: "6 = Six"
+    },
+    {
       question: "Convert the given number in words: <br> <span style='color:black;'>7</span>",
-      options: ["Seven", "One"],
+      options: ["Seven", "Four"],
       correct: "Seven",
       explanation: "7 = Seven"
     },
     {
-      question: "Convert the given number in words: <br> <span style='color:black;'>2</span>",
-      options: ["Nine", "Two"],
-      correct: "Two",
-      explanation: "2 = Two"
+      question: "Convert the given number in words: <br> <span style='color:black;'>8</span>",
+      options: ["Eight", "Ten"],
+      correct: "Eight",
+      explanation: "8 = Eight"
+    },
+    {
+      question: "Convert the given number in words: <br> <span style='color:black;'>9</span>",
+      options: ["Three", "Nine"],
+      correct: "Nine",
+      explanation: "9 = Nine"
+    },
+    {
+      question: "Convert the given number in words: <br> <span style='color:black;'>10</span>",
+      options: ["Ten", "One"],
+      correct: "Ten",
+      explanation: "10 = Ten"
     }
   ];
 </script>
