--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="hero">
       <div class="hero-card">
         <h1>LOYAL's MCQ</h1>
-        <p>Welcome to LOYAL M.C.Q's! Pick your level and let’s learn.</p>
+        <p>Welcome to LOYAL M.C.Q's!<br> Pick your level and let’s learn.</p>
       </div>
     </section>
 
@@ -40,3 +40,4 @@
     
   </body>
 </html>
+
